--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -5,31 +5,32 @@ events {
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
-
-    sendfile        on;
-    keepalive_timeout 65;
-
     server {
         listen 80;
 
-        server_name localhost;
+        server_name megashift.up.railway.app;
 
+        # Проксирование API
         location /api/ {
-            proxy_pass http://megashift-tma-server.railway.internal/;
+            proxy_pass http://$MEGASHIFT_TMA_SERVER_INTERNAL/;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
         }
 
+        # Проксирование фронтэнд (SPA)
         location / {
-            proxy_pass http://megashift-tma-ui.railway.internal/;
+            proxy_pass http://$MEGASHIFT_TMA_UI_INTERNAL/;
+            proxy_http_version 1.1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
+            proxy_set_header Accept-Encoding "";
         }
     }
 }
