--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -1,36 +1,75 @@
-worker_processes 1;
+worker_processes auto;
 
 events {
     worker_connections 1024;
 }
 
 http {
+
+    # Используем internal DNS Railway через IPv6
+    resolver [fd12::10] valid=30s ipv6=on;
+    resolver_timeout 5s;
+
+    # Общие заголовки/оптимизация
+    server_tokens off;
+
+    # Таймауты
+    proxy_connect_timeout 5s;
+    proxy_send_timeout 30s;
+    proxy_read_timeout 30s;
+    send_timeout 30s;
+
+    # API upstream с resolve и зоной (shared memory)
+    upstream api_upstream {
+        zone api_upstream 64k;
+        server ${MEGASHIFT_TMA_SERVER_INTERNAL}:${MEGASHIFT_TMA_SERVER_PORT} resolve max_fails=3 fail_timeout=10s;
+        keepalive 32;
+    }
+
+    # UI upstream с resolve и зоной
+    upstream ui_upstream {
+        zone ui_upstream 64k;
+        server ${MEGASHIFT_TMA_UI_INTERNAL}:${MEGASHIFT_TMA_UI_PORT} resolve max_fails=3 fail_timeout=10s;
+        keepalive 32;
+    }
+
     server {
         listen 80;
-
         server_name megashift.up.railway.app;
 
-        # Проксирование API
-        location /api/ {
-            proxy_pass http://$MEGASHIFT_TMA_SERVER_INTERNAL/;
-            proxy_http_version 1.1;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect off;
+        # Health check для nginx — точное совпадение пути
+        location = /nginx-health {
+            access_log off;
+            default_type text/plain;
+            return 200 'OK';
         }
 
-        # Проксирование фронтэнд (SPA)
-        location / {
-            proxy_pass http://$MEGASHIFT_TMA_UI_INTERNAL/;
+        # API
+        location /api/ {
+            proxy_pass http://api_upstream/;
             proxy_http_version 1.1;
+            proxy_set_header Connection "";
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_redirect off;
-            proxy_set_header Accept-Encoding "";
+
+            proxy_next_upstream error timeout http_502 http_503 http_504;
+        }
+
+        # UI (SPA)
+        location / {
+            proxy_pass http://ui_upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_next_upstream error timeout http_502 http_503 http_504;
         }
     }
 }
