--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -5,28 +5,33 @@ events {
 }
 
 http {
-
-    # Используем internal DNS Railway через IPv6
+    # Internal DNS для Railway с IPv6
     resolver [fd12::10] valid=30s ipv6=on;
     resolver_timeout 5s;
 
-    # Общие заголовки/оптимизация
+    # Общие настройки безопасности/оптимизации
     server_tokens off;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
 
-    # Таймауты
-    proxy_connect_timeout 5s;
-    proxy_send_timeout 30s;
-    proxy_read_timeout 30s;
-    send_timeout 30s;
+    # Gzip для фронтенда
+    gzip on;
+    gzip_types text/plain text/css application/javascript application/json image/svg+xml;
+    gzip_min_length 256;
+    gzip_comp_level 6;
 
-    # API upstream с resolve и зоной (shared memory)
+    # Rate limiting (для защиты API от агрессивных клиентов)
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
+
+    # API upstream
     upstream api_upstream {
         zone api_upstream 64k;
         server ${MEGASHIFT_TMA_SERVER_INTERNAL}:${MEGASHIFT_TMA_SERVER_PORT} resolve max_fails=3 fail_timeout=10s;
         keepalive 32;
     }
 
-    # UI upstream с resolve и зоной
+    # UI upstream
     upstream ui_upstream {
         zone ui_upstream 64k;
         server ${MEGASHIFT_TMA_UI_INTERNAL}:${MEGASHIFT_TMA_UI_PORT} resolve max_fails=3 fail_timeout=10s;
@@ -37,7 +42,13 @@ http {
         listen 80;
         server_name megashift.up.railway.app;
 
-        # Health check для nginx — точное совпадение пути
+        # Security headers
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+        # Health check для Nginx
         location = /nginx-health {
             access_log off;
             default_type text/plain;
@@ -46,6 +57,8 @@ http {
 
         # API
         location /api/ {
+            limit_req zone=api_limit burst=20 nodelay;
+
             proxy_pass http://api_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
@@ -56,6 +69,10 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
 
             proxy_next_upstream error timeout http_502 http_503 http_504;
+
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
         }
 
         # UI (SPA)
@@ -70,6 +87,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
 
             proxy_next_upstream error timeout http_502 http_503 http_504;
+
+            proxy_connect_timeout 5s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
         }
+
+        # Redirect HTTP → HTTPS (если добавишь SSL)
+        # return 301 https://$host$request_uri;
     }
 }
